--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -5,6 +5,7 @@
 \usepackage{hyperref}
 \usepackage{svg}
 \usepackage{amsmath}
+\usepackage{quotes}
 
 
 \begin{document}
@@ -12,13 +13,13 @@
 \frontmatter
 
 \input{template/colophon}
-\input{\mytitlepage}
-\input{template/declaration_TU_Graz}
+%\input{\mytitlepage}
+%\input{template/declaration_TU_Graz}
 %\cleardoublepage
 
 \tableofcontents
 
-\input{content/abstract.tex}
+%\input{content/abstract.tex}
 %\input{content/timetable.tex}
 %\input{content/acknowledgements.tex}
 
