--- a/thesis/content/methods.tex
+++ b/thesis/content/methods.tex
@@ -50,6 +50,7 @@ In figure \ref{fig:bp-model} a model of the program setup can be seen.
 \end{figure}
 
 \subsection{Ad-hoc implementation}
+\label{sec:ad-hoc}
 To ensure comparability the structure described in the previous section applies to the ad-hoc implementation as well. However two serious differences are realized: Firstly the different layers are \emph{not} connected by interfaces but rather by concrete implementations. Secondly no data access layer is being used, the functionality is provided by the data classes. Therefore asides from the basic getter and setter methods static methods for data retrieval and updating the persistent storage are supplied. This is shown by the sample code in section \ref{code:static-methods}. Figure \ref{fig:adhoc-model} shows the setup for the ad-hoc version of the application. 
 
 
@@ -85,22 +86,252 @@ The persistent storage has a quite simple structure, as can be seen in figure \r
 \clearpage
 
 \section{Phase 1: Basic Requirements}
-In this section it is explained in detail how the two applications meet the requirements.
+In this section it is explained in detail how the two applications meet the requirements. This is only a short overview, the whole project is available on Github. For more information on the project structure see the appendix section.
+
+\subsection{Best-Practice Code Samples}
+
+\subsubsection{Database Access}
+As a entry point for all data tier accesses, a class \texttt{DBManager} was created. It defines all available persistent storage options and is implemented as a singleton. The class itself is abstract, because each data access layer implementation needs to provide implementations for providing the repositories.
+\lstinputlisting{content/code/dbmanager.java}
+
+The constructor of the PostgreSQL-database manager now initializes the connection based on the arguments provided. The interface \texttt{RepositoryFactory} is used to specify which methods each data access layer implementation has to override and which repositories there are. The overridden methods of the implementation invoke the constructor of the corresponding repository implementation and provides any data necessary for their work. In this case it is the Postgres-DBManager itself as it is often necessary for the repositories to load data by using other repositories.
+
+\begin{lstlisting}
+public class DBManagerPostgres extends DBManager
+{
+	...
+	@Override
+	public UserRepository getUserRepository()
+	{
+		return new UserRepositoryPostgres(this);
+	}
+	
+	@Override
+	public ProjectRepository getProjectRepository()
+	{
+		return new ProjectRepositoryPostgres(this);
+	}
+	...
+}
+
+\end{lstlisting}
+
+In the business code it is now very easy to invoke the methods. The main model holds the only instance of the DBManager, each submodel has a reference to the main model. 
+
+\begin{lstlisting}
+public void login(String username, char[] password) throws Exception
+{
+	UserRepository repo = mainModel.db().getUserRepository();
+	User u = repo.getByPrimaryKey(username);
+	...
+}
+\end{lstlisting}
+
+\subsubsection{UI Interaction}
+As stated before there is a main controller that instantiates the sub-controllers. Because a pairing is necessary between model and controller the main controller provides methods to do so. After the main model has instantiated all sub-models he pairs it with the controller. This process is called \emph{dependency injection}.
+
+\begin{lstlisting}
+private MainModelImpl(String driver, String url, String username, String password, String controllerImpl, String
+frontend) throws Exception
+{
+
+	db = DBManager.get(driver, url, username, password);
+	ControllerManager.initInstance(controllerImpl, frontend);
+	
+	controller = ControllerManager.getInstance();
+	controller.setModel(this);
+	
+	login = new LoginModelImpl();
+	pairLogin();
+	...
+}
+
+private void pairLogin()
+{
+	login.setMainModel(this);
+	controller.pairLogin(login);
+}
+
+\end{lstlisting}
+
+The method call seen in line 6 of the previous listing states a call to the static ControllerManager class. Similar to the DBManager class this is a singleton class that holds a switch case that instantiates the main controller based on the implementation provided by the arguments. After the method calls now the \texttt{LoginModel} class knows its main model and its controller. 
+
+The same process is repeated for the layer between controller and view. 
+
+\begin{lstlisting}
+public class MainViewSwing
+{
+	...
+	public void pairLogin(LoginController controller)
+	{
+		controller.setView(login);
+		login.setController(controller);
+	}
+	...
+}
+\end{lstlisting}
+   
 
 \subsection{Ad-hoc Code Samples}
-%\subsubsection{Database Access}
-%\subsubsection{UI Interaction}
+In the first phase of the application not many differences can be observed. The flexibility introduced by the patterns shows its effect in the following phases. 
+
+\subsubsection{Database Access}
+As stated in section \ref{sec:ad-hoc} no repositories are used for the database access. All code associated with the persistent storage is directly placed into the data classes. They provide static methods for retrieve operations and non-static methods for update operations. 
+
+As no interface is used the main model instantiates the DBManager implementation directly. 
+
+\begin{lstlisting}
+public void login(String username, char[] password) throws Exception
+{
+	User u = User.getByPrimaryKey(username, mainModel.db());
+	...
+}
+\end{lstlisting}
+
+\begin{lstlisting}
+public class MainModelImpl
+{
+	...
+	private final DBManagerPostgres db;
+	
+	private MainModelImpl(String driver, String url, String username, String password, String controllerImpl, String
+	frontend) throws Exception
+	{
+		db = new DBManagerPostgres(driver, url, username, password);
+		...
+	}
+	...
+}
+\end{lstlisting}
+
+\subsubsection{UI Interaction}
+The only difference between the pairing process of the best practice implementation and the ad-hoc version is that no interfaces are used and thus the methods take the implementation  classes instead of the interface as parameters. 
+
+\begin{lstlisting}
+public class MainViewSwing
+{
+	...
+	public void pairLogin(LoginControllerStandard controller)
+	{
+		controller.setView(login);
+		login.setController(controller);
+	}
+	...
+}
+\end{lstlisting}
+
+
+\section{Phase 2: Support of a different graphical user interface library}
+After adding the second GUI differences between the two implementations are observable.
 
 \subsection{Best-Practice Code Samples}
-%\subsubsection{Database Access}
-%\subsubsection{UI Interaction}
+Due to the use of the interfaces aside from implementing the view itself only very little modifications have to be made. Only the ViewManager-singleton has to be adopted to support the new view \footnote{The internal structure of the JavaFX-Library needed the creation of a own thread. This is done by the call \texttt{launchFx()}}.
 
-\section{Phase 2: More Databases / UIs}
+\begin{lstlisting}
+public class ViewManager
+{
+	private static MainView view;
+	
+	public static void initInstance(String frontend)
+	{
+		assert (view == null);
+		switch(frontend)
+		{
+			case "standard":
+				view = new MainViewSwing();
+				break;
+			case "javafx":
+				MainViewFX fx = MainViewFX.getInstance();
+				launchFx(fx);
+				break;
+			default:
+				throw new UnsupportedOperationException();
+		}
+	}
+	...
+}
+	
+\end{lstlisting}
 
-\subsection{Monolithic Code Samples}
-%\subsubsection{Database Access}
-%\subsubsection{UI Interaction}
+\subsection{Ad-hoc Code Samples}
+Because the controllers do not rely on interfaces but on actual implementations now each call to a view class has to be differentiated which bloats the code. The following if-else statement is necessary at every call to a view. Obviously with more views the code is bloated even more, maybe even a switch-case would be necessary.
+
+\begin{lstlisting}
+	public class LoginControllerStandard
+	{
+	private LoginViewSwing viewSwing;
+	private LoginViewFX viewFX;
+	private LoginModelImpl model;
+	...
+	
+	public void loginClicked()
+	{
+		String username;
+		char[] password;
+		if(viewSwing != null)
+		{
+			username = viewSwing.getEnteredUsername();
+			password = viewSwing.getEnteredPassword();
+		}
+		else
+		{
+			username = viewFX.getEnteredUsername();
+			password = viewFX.getEnteredPassword();
+		}
+		...
+	}
+	...
+}
+\end{lstlisting}
+
+
+\section{Phase 3: Support of a different data tier implementation}
+The support of a new data tier shows even more weaknesses of the ad-hoc implementation.
 
 \subsection{Best-Practice Code Samples}
-%\subsubsection{Database Access}
-%\subsubsection{UI Interaction}
+With the best-practice program version again only very small changes to existing code were necessary. Only the DBManager static method had to be adopted to support the other database.
+
+\begin{lstlisting}
+public abstract class DBManager implements RepositoryFactory
+{
+	private static final String DRIVER_POSTGRES = "org.postgresql.Driver";
+	private static final String DRIVER_MONGO = "mongo";
+	private static DBManager instance;
+	
+	public static DBManager get(String driver, String url, String username, String password)
+	{
+		switch(driver)
+		{
+			case DRIVER_POSTGRES:
+				if(instance == null) instance = new DBManagerPostgres(driver, url, username, password);
+				break;
+			case DRIVER_MONGO:
+				if(instance == null) instance = new DBManagerMongo(url, username, password);
+				break;
+			default:
+			throw new UnsupportedOperationException("Not yet implemented");
+		}
+		return instance;
+	}
+}
+\end{lstlisting}
+
+\subsection{Ad-hoc Code Samples}
+After changing all data classes to support the other data tier implementation all model classes needed to be adopted as well. This is because it had to be differentiated which database implementation is currently active. 
+
+\begin{lstlisting}
+public class LoginModelImpl
+{
+	...
+	public void login(String username, char[] password) throws Exception
+	{
+		User u = null;
+		if(mainModel.dbPostgres() != null)
+			u = User.getByPrimaryKey(username, mainModel.dbPostgres());
+		else
+			u = User.getByPrimaryKey(username, mainModel.dbMongo());
+		...
+	}
+	...
+}
+\end{lstlisting}
